src/objects/Festival__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Number of persons festival can hold</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the festival</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gen_Admission_Ticket_Sold__c</fullName>
        <description>Total no of general admission ticket sold</description>
        <label>Gen Admission Ticket Sold</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>General Admission</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>start date of the festival</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <formula>VIP_TICKET_SOLD__c  +  Gen_Admission_Ticket_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tota Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_TICKET_SOLD__c</fullName>
        <description>TOTAL NUMBER OF VIP TICKET SOLD</description>
        <label>VIP TICKET SOLD</label>
        <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>VIP</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Festival</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HouseFull</fullName>
        <active>true</active>
        <description>festival has reached its threshold</description>
        <errorConditionFormula>Total_Tickets_Sold__c &gt;10</errorConditionFormula>
        <errorMessage>House Full. Please try next time</errorMessage>
    </validationRules>
</CustomObject>